--- a/css/lib/style.css
+++ b/css/lib/style.css
@@ -853,19 +853,19 @@ select {
 
 /* Move a janela com informações do mapa para a direita*/
 #static-bubble {
-  border-radius: 0;
-  max-height: 94%;
-  top: 0px;
-  opacity: 1;
-  right: 30px;
-  max-width: 40%;
+  border-radius: 0 !important;
+  max-height: 94% !important;
+  top: 0px !important;
+  opacity: 1 !important;
+  right: 30px !important;
+  max-width: 40% !important;
   left: auto !important;
-  background: #fff none repeat scroll 0% 0%;
-  color: #354A5B;
+  background: #fff none repeat scroll 0% 0% !important;
+  color: #354A5B !important;
 }
 
 #static-bubble.selected {
-  opacity: 1;
+  opacity: 1!important;
 }
 
 #waypoints a.title.selected {
@@ -873,27 +873,27 @@ select {
 }
 
 #waypoints a.title {
-  line-height: 1.2em;
+  line-height: 1.2em !important;
 }
 
 #waypoints a.title.highlighted {
-  background: #4AAAA5;
-  color: white;
+  background: #4AAAA5 !important;
+  color: white !important;
 }
 
 #neatline .widget {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
 .bubble.static {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
 /*Fontes do bubble com informações do item no mapa*/
 
 #static-bubble .title {
-  font-weight: bold;
-  font-size: 1.3em;
+  font-weight: bold !important;
+  font-size: 1.3em !important;
 }
 
 /* Texto do lightbox */
