--- a/neatline/exhibits/themes/mapa-cultura/style1.css
+++ b/neatline/exhibits/themes/mapa-cultura/style1.css
@@ -6,16 +6,25 @@ html{
 body{
     font-family: 'Roboto', sans-serif;
     background: #EDF6EB;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 img {
     max-width: 100%;
 }
-a{
+a {
   outline: none;
+  color: #354A5B;
 }
+a:hover {
+  color: #4AAAA5;
+}
+
 .record a{
   outline: none;
+}
+
+p {
+  line-height: 1.2em;
 }
 
 fieldset {
@@ -94,9 +103,11 @@ h5 a{
 h2{ font-family: 'Roboto', sans-serif;
 font-weight: 600;
 }
-span{
- color:#3B4551;   
-}
+
+/*span{
+ color:#3B4551;
+}*/
+
 .title_ini a{
 color: #353F4F;
 outline: none;
@@ -177,7 +188,7 @@ opacity: 0; /*esta para os demais browsers*/
 [role="menu"] .dropdown-menu li a:hover {
     /*color: #35404F;*/
     background-color: #D4EFED;
-    
+
 }
 #rede a{
   outline:none;
@@ -300,7 +311,7 @@ opacity: 0; /*esta para os demais browsers*/
 }
 
 .rodape a:hover {
-     text-decoration: underline;
+     text-decoration: underline ;
 }
 .rodape span {
      color: #fff;
@@ -324,7 +335,7 @@ opacity: 0; /*esta para os demais browsers*/
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    margin:0px 12px 0px 8px; 
+    margin:0px 12px 0px 8px;
     padding:0px;
     width:100%;
 }
@@ -400,7 +411,7 @@ opacity: 0; /*esta para os demais browsers*/
     cursor:pointer;
     font-weight:bold;
     font-size:14px;
-    color:#c30; 
+    color:#c30;
     margin-top:15px;
 }
 #toggle_class{
@@ -424,7 +435,7 @@ opacity: 0; /*esta para os demais browsers*/
 #toggle_class a:hover{
      background-color: #4AAAA5;
 
-     
+
 }
 .clicado{
   background-color: #4AAAA5;
@@ -440,8 +451,8 @@ opacity: 0; /*esta para os demais browsers*/
   display: inline-block;
   vertical-align: middle;
   margin-left: 23%;
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   border-top: 20px solid #4AAAA5;
@@ -452,8 +463,8 @@ opacity: 0; /*esta para os demais browsers*/
   display: inline-block;
   vertical-align: middle;
   margin-left: 73%;
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   border-top: 20px solid #4AAAA5;
@@ -464,7 +475,7 @@ opacity: 0; /*esta para os demais browsers*/
 }
 #tit_browse, #tit_browse1 img{
   display: block;
-  margin-left: auto; 
+  margin-left: auto;
   margin-right: auto }
 #tit_browse1 {
   text-align: center;
@@ -491,7 +502,7 @@ opacity: 0; /*esta para os demais browsers*/
 }
 .tit_b{
    display: block;
-   margin-left: auto; 
+   margin-left: auto;
    margin-right: auto
 }
 /*menu superior */
@@ -514,7 +525,7 @@ opacity: 0; /*esta para os demais browsers*/
   /* content necessário para a criação de um elemento vazio */
   content: "";
 
-  width: 0; 
+  width: 0;
   height: 0;
 
   /* position: absolute para manipularmos a posição da seta */
@@ -522,7 +533,7 @@ opacity: 0; /*esta para os demais browsers*/
 
   /* Right com valor negativo para ele ficar para fora do balão de dialogo */
   right: -32px;
-  
+
   /* E aqui o truque com as bordas */
   border-top: 50px solid transparent;
   border-bottom: 50px solid transparent;
@@ -578,7 +589,7 @@ opacity: 0; /*esta para os demais browsers*/
 }
 #box-green p{
     text-align: left;
-   
+
 }
 #box-green span a{
   color:#FF5353;
@@ -588,7 +599,7 @@ opacity: 0; /*esta para os demais browsers*/
   margin-top: 10px;
 }
 .content{
-    display:block;  
+    display:block;
 }
 
 /* Clearfix */
@@ -651,12 +662,12 @@ nav#minimenu{
 }
 
 nav#minimenu ul {
-  margin: 0;  
-  padding:0; 
+  margin: 0;
+  padding:0;
   width: 100%;
 
-  
- 
+
+
 }
 
 nav#minimenu li{
@@ -699,12 +710,12 @@ nav#minimenu1{
 }
 
 nav#minimenu1 ul {
-  margin: 0;  
-  padding:0; 
+  margin: 0;
+  padding:0;
   width: 100%;
 
-  
- 
+
+
 }
 
 nav#minimenu1 li{
@@ -800,7 +811,7 @@ select {
         }
 /* #admin-bar { display: none; } */
 /*show.php(exhibits)-> deixa imagem redonda no exhibits */
-.exhibit-item img{ 
+.exhibit-item img{
    /* Agora a mágica */
    border-radius: 50%;
 
@@ -825,17 +836,29 @@ select {
 #margemleft{
     margin-left:1.7em;
   }
- 
+
 /*Neatline*/
 #neatline-narrative {
-    height: 73%;
+    height: 76%;
 }
-/*
-#neatline {
-    height: 80%;
-    margin-left: 23%;
-    position: absolute;
-    //width: 41%;
-    width: 77%;
+
+#waypoints a.title.selected {
+  background: #354A5B none repeat scroll 0% 0%;
 }
- */
+
+#waypoints a.title {
+  line-height: 1.2em;
+}
+
+#waypoints a.title.highlighted {
+  background: #4AAAA5;
+  color: white;
+}
+
+#neatline .widget {
+  opacity: 0.4;
+}
+
+.bubble.static {
+  opacity: 0.4;
+}
