--- a/css/lib/style.css
+++ b/css/lib/style.css
@@ -853,20 +853,20 @@ select {
 }
 
 /* Move a janela com informações do mapa para a direita*/
-/*#static-bubble {
+#static-bubble {
   border-radius: 0;
   color: #000;
-  max-height: 94%;
+  max-height: 95%;
   top: 0px;
-  opacity: 1;
-  left: 349px;
-  max-width: 40%;
+  left: 70% !important;
+  right: 20px !important;
+  max-width: 40% !important;
   /*border: 6px solid rgb(53, 74, 91) !important*/
   box-shadow: -1px 1px 3px 0px rgb(53, 74, 91);
-}*/
+}
 
 #static-bubble.selected {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
 #waypoints a.title.selected {
